2003-01-05  Dani Carbonell <bocata@panete.net>

	* TODO: updated.

	* src/tetrinet.c (tetrinet_inmessage): converted reason to disconnect
	to UTF-8 so it can be displayed properly.

	* src/winlist.c (winlist_additem): fixed memory leak.

	* src/misc.c (nocolor): it wasn't doing anything, reverted to its
	previous behaviour, but now it doesn't cut accented characters ( < 0 ).

	* src/fields.c (fields_setlabel): now displays correctly all the UTF-8
	characters, applying the nocolor () function to the ASCII strings
	before recoding them to UTF-8.

	* src/partyline.c (partyline_namelabel): likewise.
	(partyline_page_new): added a horizontal scrollbar to the playerlist.

	* src/gtetrinet.c (keypress): string "Playing Fields" wasn't been
	translated, and gtk_object_get_data ported to g_object_get_data.
	(keyreleased): likewise.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* TODO: updated.

	* src/dialog.c: port gtk_signal_connect instances to g_signal_connect.
	* src/fields.c: likewise.
	* src/gtetrinet: likewise.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c: update copyright notices... happy new year.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* TODO: add missing item.

	* New patch from Dani Carbonell:

	* src/commands.c (about_command): only create dialog if it doesn't
	exist. If it does, raise it.

	* src/dialogs.c (connectingdialog_destroy): remove timeouttag only if
	it isn't 0.

	* src/misc.c (leftlabel_set): convert theme info to UTF-8 before
	displaying.
	* src/winlist.c (winlist_additem): convert winlist items to UTF-8.

	* src/partyline.c (partyline_page_new): port gtk_signal_connect to
	g_signal_connect.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: add Dani Carbonell.
	* TODO: remove done items, add new issues.
	* NEWS: updated for 0.5.0.

	* src/commands.c (about_command): update author list.

2003-01-04  Jordi Mallach  <jordi@sindominio.net>
